# my-mcp-

./: .env.example  .gitignore  LICENSE  QUICK_START.md  README.md  pyproject.toml
configs/: claude_desktop_complete.json
marketing/: README.md  implementation_guide.md  linkedin_post_template.md  visual_design_mockups.md
scripts/: setup.ps1
servers/gemini-audio/: pyproject.toml  server.py
servers/gemini-video/: pyproject.toml  server.py
servers/video-audio/: README.md  pyproject.toml
